--- a/gb/21/10/15/n13306632.md
+++ b/gb/21/10/15/n13306632.md
@@ -1,56 +1,56 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/yvrwxa344/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/yvrwxa344/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/yvrwxa344/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/yvrwxa344/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/yvrwxa344/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/yvrwxa344/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/yvrwxa344/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/yvrwxa344/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/yvrwxa344/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/yvrwxa344/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/yvrwxa344/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/yvrwxa344/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/yvrwxa344/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/yvrwxa344/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/yvrwxa344/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/yvrwxa344/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/yvrwxa344/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/yvrwxa344/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/yvrwxa344/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/yvrwxa344/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/yvrwxa344/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/yvrwxa344/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/yvrwxa344/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>阳明交大首创热感应载药贴片 可加速伤口愈合</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2021/10/id13306634-522325-600x400.jpg" />
 <h6>图为阳明交通大学生物医学工程系教授钟次文（左3）团队。（阳明交大提供）
 </h6>
 <hr>
-<p>【大纪元2021年10月15日讯】（大纪元记者林紫馨台湾台北报导）<ahref="https://github.com/yvrwxa344/djy/blob/master/gb/tag/%E9%98%B3%E6%98%8E%E4%BA%A4%E5%A4%A7.md#1">阳明交大</a>生物医学工程学系教授钟次文领导的研究团队，运用从<ahref="https://github.com/yvrwxa344/djy/blob/master/gb/tag/%E8%9A%95%E4%B8%9D.md#1">蚕丝</a>萃取出的蛋白加上多巴胺，创造出具备热感应与抗氧化的<ahref="https://github.com/yvrwxa344/djy/blob/master/gb/tag/%E8%8D%AF%E7%89%A9%E8%B4%B4%E7%89%87.md#1">药物贴片</a>，这个贴片已经在动物身上实验成功，未来可望应用在治疗伤口加速愈合。这是台湾第一次制备出具备热感应的“<ahref="https://github.com/yvrwxa344/djy/blob/master/gb/tag/%E8%9A%95%E4%B8%9D.md#1">蚕丝</a>多巴胺”<ahref="https://github.com/yvrwxa344/djy/blob/master/gb/tag/%E5%A5%88%E7%B1%B3.md#1">奈米</a>微粒，它可以经过红外光照射，触发并控制贴片承载药物的释放速率，达到精准医疗的需求。</p>
-<p><ahref="https://github.com/yvrwxa344/djy/blob/master/gb/tag/%E5%A5%88%E7%B1%B3.md#1">奈米</a>药物有助于促进药物吸收与代谢，有更好的治疗效果，但前提是必须找到一个具备生物相容性，同时又能稳定释放药物的材料。钟次文领导的研究团队与农委会苗栗农业改良场，协同取得品质稳定的良好蚕茧，经过化学脱胶后纯化成蚕丝蛋白，并将蚕丝蛋白与多巴胺合成奈米大小的微粒，成功研发出具备热感应与抗氧化的“蚕丝多巴胺”药物储存及释放载体。</p>
+<p>【大纪元2021年10月15日讯】（大纪元记者林紫馨台湾台北报导）<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E9%98%B3%E6%98%8E%E4%BA%A4%E5%A4%A7.md#1">阳明交大</a>生物医学工程学系教授钟次文领导的研究团队，运用从<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%9A%95%E4%B8%9D.md#1">蚕丝</a>萃取出的蛋白加上多巴胺，创造出具备热感应与抗氧化的<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%8D%AF%E7%89%A9%E8%B4%B4%E7%89%87.md#1">药物贴片</a>，这个贴片已经在动物身上实验成功，未来可望应用在治疗伤口加速愈合。这是台湾第一次制备出具备热感应的“<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%9A%95%E4%B8%9D.md#1">蚕丝</a>多巴胺”<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%A5%88%E7%B1%B3.md#1">奈米</a>微粒，它可以经过红外光照射，触发并控制贴片承载药物的释放速率，达到精准医疗的需求。</p>
+<p><ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%A5%88%E7%B1%B3.md#1">奈米</a>药物有助于促进药物吸收与代谢，有更好的治疗效果，但前提是必须找到一个具备生物相容性，同时又能稳定释放药物的材料。钟次文领导的研究团队与农委会苗栗农业改良场，协同取得品质稳定的良好蚕茧，经过化学脱胶后纯化成蚕丝蛋白，并将蚕丝蛋白与多巴胺合成奈米大小的微粒，成功研发出具备热感应与抗氧化的“蚕丝多巴胺”药物储存及释放载体。</p>
 <p>钟次文表示，由于蚕丝由蛋白质组成，是一种天然的生医材料，而多巴胺本来就是一种神经传导物质，可以覆盖在不同材料表面形成多功能涂层，所以两种材料都具有高度生物相容性，与人体排斥性低，一旦制成奈米微粒后，可以吸附不同特性的药物，可稳定的把药物释放出来。</p>
-<p>目前研究团队已经把这项技术结合肝素（一种抗凝血剂）制成贴片，并在小鼠的伤口上实际测试，发现可以降低血栓，证实这项技术应用于伤口治疗具很好的潜力。钟次文表示，过去就曾以蚕丝作为材料，研发出可用于受伤心肌修复的缀补片，这次再运用相同材料，尝试应用在<ahref="https://github.com/yvrwxa344/djy/blob/master/gb/tag/%E4%BC%A4%E5%8F%A3%E6%84%88%E5%90%88.md#1">伤口愈合</a>上，证实相关技术已经越来越趋于成熟，可以应用在不同领域。◇</p>
+<p>目前研究团队已经把这项技术结合肝素（一种抗凝血剂）制成贴片，并在小鼠的伤口上实际测试，发现可以降低血栓，证实这项技术应用于伤口治疗具很好的潜力。钟次文表示，过去就曾以蚕丝作为材料，研发出可用于受伤心肌修复的缀补片，这次再运用相同材料，尝试应用在<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%BC%A4%E5%8F%A3%E6%84%88%E5%90%88.md#1">伤口愈合</a>上，证实相关技术已经越来越趋于成熟，可以应用在不同领域。◇</p>
 <p>责任编辑：林勤芝</p>
 
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/20/9/12/n12399210.md#1">研究：电子烟并非戒烟更好的选择</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/21/1/10/n12678157.md#1">心脏骤停有3症状 2招急救防猝死！急救方法全图解</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/21/3/26/n12836822.md#1">失智症照护资源多  只“药”你能重新想起我</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/21/6/3/n12994866.md#1">澳科学家研发疫苗贴片 效果比打针接种好</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/21/6/30/n13058801.md#1">抗疫灵丹就在你脚下！接地气有助改善新冠</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/21/10/4/n13279086.md#1">新发明疫苗贴片 无需冷藏不用打针</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/21/10/15/n13306717.md#1">罢免案投票临近 台立委陈柏惟遭中共假主播攻击</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/21/10/15/n13307110.md#1">日本拟六度援台疫苗 台外交部：感谢</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/21/10/15/n13307115.md#1">大专校院兼任、专任教师比例失衡 台监院纠正教育部</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/21/10/15/n13307055.md#1">台16日不仅气温骤降 海峡上强风恐逾轻台标准</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/9/12/n12399210.md#1">研究：电子烟并非戒烟更好的选择</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/1/10/n12678157.md#1">心脏骤停有3症状 2招急救防猝死！急救方法全图解</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/3/26/n12836822.md#1">失智症照护资源多  只“药”你能重新想起我</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/6/3/n12994866.md#1">澳科学家研发疫苗贴片 效果比打针接种好</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/6/30/n13058801.md#1">抗疫灵丹就在你脚下！接地气有助改善新冠</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/4/n13279086.md#1">新发明疫苗贴片 无需冷藏不用打针</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678778.md#1">台国安局长陈明通：乌俄冲突或长期化 边打边谈</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13679384.md#1">接见美国民主基金会长 苏贞昌：全球民主伙伴团结合作</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678783.md#1">台国安局长：美将介入台海更深</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678844.md#1">18岁公民权绑大选 蓝营驳绝无打假球 质疑绿营双标</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/8/n9817759.md#1" target="_blank">袁斌：“十月革命”真相与俄国三大倒退</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/17/n10401300.md#1" target="_blank">三位西方富豪的经商成功之道</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/18/n11729917.md#1" target="_blank">袁斌：“南京事件”与所谓“四一二反革命政变”</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/11/n10845276.md#1" target="_blank">这些前中共媒体人的见证</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/20/3/16/n11945071.md#1">【新闻看点】官媒忙降温？赵立坚及五毛被打脸</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/20/3/16/n11943071.md#1">【现场视频】武汉医生揭中共关闭方舱内幕</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/20/3/16/n11943195.md#1">日媒体人评台湾防疫2大功臣 第一名竟非陈时中</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/20/3/16/n11945291.md#1">蓬佩奥与杨洁篪通话 正告北京勿散怪诞谣言</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/20/3/15/n11942593.md#1">【疫情透视】港抗疫显奇迹 天灭中共成保命符</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/20/3/15/n11942589.md#1">赵立坚甩锅病毒源自美国 艺人黄秋生狠酸中共</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/20/3/15/n11942781.md#1">潘迎紫呼吸道感染急就医 被要求检测新冠病毒</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/20/3/15/n11942415.md#1">西班牙疫情大爆发 梁咏琪一家三口封城前返港</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/20/3/16/n11945468.md#1">赵丽颖复工晒片场照 吊超高威亚压根看不到人</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/20/3/11/n11933369.md#1">清朝学士三奇梦 是谁掌握他的一生？</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/20/1/2/n11764074.md#1">他们身上的毒疮 原来是夙怨</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/13/1/31/n3790016.md#1">米开朗基罗Michelangelo（1）早年生涯</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/20/3/11/n11933376.md#1">僧人精准预言 琅琊三孩童竟是“真一品”</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/20/3/7/n11923201.md#1">【历史回眸】抵抗极权 最简单的方法是拒绝说谎</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/21/n11960123.md#1">【拍案惊奇】川普指中共延误 武汉二次爆发预警</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/21/n11961699.md#1">追责中共隐瞒疫情 国际专家提六大方案</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/21/n11960837.md#1">中共声称疫情“零增长” 民众揭背后真相</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/21/n11962082.md#1">【最新疫情3.22】川普启动三州国民警卫队</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/22/n11962341.md#1">对北京掩盖疫情失望 川普：中共非常诡秘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/20/n11959416.md#1">众星遭陆“限籍令”点名 台湾艺人揭中共套路</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/23/n11965271.md#1">刘真惊传病逝 留下4岁女儿 享年44岁　</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/21/n11962008.md#1">好莱坞制作人瓦特染疫：身体像被巴士撞到</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/20/n11958206.md#1">TWICE周子瑜首本个人照片书 4月27日发行</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/22/n11963031.md#1">胞弟成为台湾女婿 瑞莎曝婚礼照喊开心</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/2/n11909598.md#1">【命理】长寿的命怎样看？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/11/n11933384.md#1">断臂僧转世？小蛮童有胆 向康熙帝要官职</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/13/n11938981.md#1">“千金报德”英雄本色</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/17/n11945807.md#1">2020 否极泰来</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/10/n11929076.md#1">天地清明引(234) 降天罪－琼林鏖战4</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/yvrwxa344/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/yvrwxa344/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/10/15/n13306632.htm">阳明交大首创热感应载药贴片 可加速伤口愈合</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/10/15/n13306632.htm">阳明交大首创热感应载药贴片 可加速伤口愈合</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/yvrwxa344/djy/blob/master/gb/21/10/15/n13306632.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/yvrwxa344/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/yvrwxa344/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/yvrwxa344/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/yvrwxa344/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/yvrwxa344/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/yvrwxa344/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/yvrwxa344/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/yvrwxa344/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/yvrwxa344/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/yvrwxa344/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/yvrwxa344/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/yvrwxa344/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/yvrwxa344/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/yvrwxa344/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/yvrwxa344/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/yvrwxa344/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/yvrwxa344/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/yvrwxa344/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/yvrwxa344/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/yvrwxa344/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/yvrwxa344/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/yvrwxa344/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/yvrwxa344/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/yvrwxa344/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/21/10/15/n13306632.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
